# Homework

Nickolai Lychagin/: README.md  rss_reader.py  tests.py
NickolaiLychagin/: .gitignore  CHANGELOG.md  LICENSE  Optional.py  README.md  Task12_1.py  Task1_1.py  Task1_2.py  Task1_3.py  Task1_3_2.py  Task1_4.py  Task1_5.py  Task1_6.py  Task1_6_2.py  Task4_1.py  Task4_10.py  Task4_11.py  Task4_2.py  Task4_3.py  Task4_4.py  Task4_5.py  Task4_6.py  Task4_7.py  Task4_7.txt  Task4_8.py  Task4_9.py  Task7_1.py  Task7_10.py  Task7_11.py  Task7_2.py  Task7_3.py  Task7_4.py  Task7_5.py  Task7_6.py  Task7_7.py  Task7_8.py  Task7_9.py  rss_reader.py  setup.cfg
NickolaiLychagin/rss_reader/: __main__.py  app.py  rss_reader_colors.py  rss_reader_config.py  rss_reader_dates.py  rss_reader_files.py  rss_reader_sql.py  rss_reader_text.py  rss_reader_xml.py
NickolaiLychagin/rss_reader/css/: css_html.css  css_pdf.css
NickolaiLychagin/rss_reader/tests/: test_sql.db  tests.py
NickolaiLychagin/src/rss_reader/: __main__.py  rss_reader.py
NickolaiLychagin/tests/: tests.py
