[metadata]
name = rss_reader
version = 1.1
author = Nickolai Lychagin
author_email = belarusconsul@gmail.com
description = Pure Python command-line RSS reader
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/belarusconsul/Homework
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = rss_reader
python_requires = >=3.9

[options.entry_points]
console_scripts =
    rss_reader = rss_reader.rss_reader:run_rss_reader